--- a/datascience.ipynb
+++ b/datascience.ipynb
@@ -33,14 +33,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "e8eae072",
    "metadata": {},
    "outputs": [],
    "source": [
     "#500 temperaturas generadas aleatoriamente\n",
     "np.random.seed(42)\n",
-    "temperaturas = np.cumsum(np.random.randn(500) * 0.5 + 0.1) + 20  # empieza en 20 y fluctúa\n",
+    "temperaturas = np.cumsum(np.random.randn(500) * 0.5 + 0.1) + 20\n",
     "\n",
     "scaler = MinMaxScaler()\n",
     "temperaturas_norm = scaler.fit_transform(temperaturas.reshape(-1, 1)).flatten()\n",
