--- a/datascience.ipynb
+++ b/datascience.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "id": "c6c3bdec",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "id": "5eb56009",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "id": "625c8c37",
    "metadata": {},
    "outputs": [],
@@ -79,15 +79,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "e8eae072",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "500"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#500 temperaturas generadas aleatoriamente\n",
     "np.random.seed(42)\n",
-    "temperaturas = np.cumsum(np.random.randn(500) * 0.5 + 0.1) + 20\n",
-    "\n",
+    "temperaturas = np.cumsum(np.random.randn(500) * 0.5 + 0.1) + 20 #Borrar esto y meter las temperaturas reales\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c3eaa101",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "scaler = MinMaxScaler()\n",
     "temperaturas_norm = scaler.fit_transform(temperaturas.reshape(-1, 1)).flatten()\n",
     "\n",
